Patch v0.2
- Updated GUI